[tool.poetry]
name = "land-cover-explorer"
version = "0.1.0"
description = ""
authors = ["Andrew Feltmann <afeltmann13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
rasterio = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

